# cmake-tutorial

cmake/: iar-cspy-arm.cmake  iar-cspy-test.mac  iar-functions.cmake  iar-toolchain.cmake
examples/: iar-toolchain.cmake
examples/arm/: iar-functions.cmake
examples/arm/hello-world/: CMakeLists.txt
examples/arm/mix-c-asm/: CMakeLists.txt  foo_asm.h  foo_asm.s  main.c
examples/arm/using-libs/app/: CMakeLists.txt  main.c
examples/arm/using-libs/lib/: CMakeLists.txt  add.c  mathLib.h  mul.c  sub.c
examples/c-stat/: CMakeLists.txt  c-stat.cmake  c-stat1.c  c-stat2.c  cstat.checks
examples/cstat/: CMakeLists.txt  cstat.cmake  delay.h  delay.s  main.c  stack.c
examples/cstat/inc/: delay.h
examples/standards/: CMakeLists.txt  main.c  main.cpp
examples/trustzone/: CMakeLists.txt
